--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "gulp-autoprefixer": "~1.0.1",
     "gulp-watch": "~1.1.0",
     "browserify": "~6.2.0",
-    "vinyl-source-stream": "~1.0.0"
+    "vinyl-source-stream": "~1.0.0",
+    "gulp-notify": "~2.0.0"
   },
   "dependencies": {
     "angular": "~1.3.0",
