--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "gulp-watch": "~1.1.0",
     "browserify": "~6.2.0",
     "vinyl-source-stream": "~1.0.0",
-    "gulp-notify": "~2.0.0"
+    "gulp-notify": "~2.0.0",
+    "gulp-ng-html2js": "~0.1.8",
+    "gulp-concat": "~2.4.1"
   },
   "dependencies": {
     "angular": "~1.3.0",
-    "angular-resource": "~1.3.0"
+    "angular-resource": "~1.3.0",
+    "angular-ui-router": "~0.2.11"
   }
 }
